Corrección integral de RoomMatch (#1)
Integra las correcciones de backend, frontend, seguridad, configuración, base de datos, pruebas y CI realizadas en la rama fix/roommatch-integral-2026-09-06.